fixed overlapping labels on award chart

--- a/src/_scss/pages/award/shared/awardAmountsSection/_charts.scss
+++ b/src/_scss/pages/award/shared/awardAmountsSection/_charts.scss
@@ -559,4 +559,8 @@ $proc-current-offset: rem(5);
             }
         }
     }
+    .award-amounts-viz-label__desc-text {
+        padding-top: rem(8);
+        background-color: $color-white;
+    }
 }
